fixed comment textarea alignment, cross-browser issues - tested in FF, Chrome, IE7/8

--- a/askbot/skins/default/media/style/style.css
+++ b/askbot/skins/default/media/style/style.css
@@ -469,6 +469,7 @@ span.delete-icon {
     padding-left: 13px;
     vertical-align: bottom;
     background: url(../images/close-small-dark.png) no-repeat;
+    cursor: default;
 }
 span.delete-icon:hover {
     background: url(../images/close-small-hover.png) no-repeat;
@@ -954,7 +955,7 @@ a:hover.medal {
 
 .comments {
     font-size: 12px;
-    line-height: 15px;
+    width: 650px;    
     clear: both;
 }
 
@@ -965,7 +966,6 @@ a:hover.medal {
 }
 
 .comments .content {
-    width: 650px;
     margin-bottom: 7px;    
 }
 
@@ -980,7 +980,8 @@ a:hover.medal {
 div.comment .comment-votes {
     float: left;
     width: 37px;
-    padding: 8px 3px 8px 3px;
+    line-height: 130%;
+    padding: 6px 5px 6px 3px;
 }
 
 div.comment .comment-body {
@@ -994,13 +995,13 @@ div.comment .comment-body {
 div.comment .comment-delete {
     float: right;
     width: 14px;
+    line-height: 130%;
     padding: 5px 6px;
 }
 
 div.comment .upvote {
     margin: 0px;
-    smargin-right: 0px;
-    padding-right: 15px;
+    padding-right: 17px;
     text-align: right;
     height: 20px;
     font-size: 13px;
@@ -1014,12 +1015,12 @@ div.comment .upvote.upvoted {
 
 div.comment .upvote.hover {
     background: url(../images/go-up-grey.png) no-repeat;
-    background-position: top right;
+    background-position: right 1px;
 }
 
 div.comment .upvote:hover {
     background: url(../images/go-up-orange.png) no-repeat;
-    background-position: top right;    
+    background-position: right 1px;
 }
 
 .comments div.controls {
@@ -1030,15 +1031,20 @@ div.comment .upvote:hover {
     margin: 3px 0 20px 5px;
 }
 
+.comments form.post-comments {
+    width: 560px;
+    margin: 3px 30px 4px 45px;
+}
+
 .comments textarea {
     display: block;
     height: 48px;
-    width: 644px;
-    margin: 3px 0 4px 0;
+    width: 560px;
+    margin: 3px 0px;
     font-family: sans-serif;
     font-size: 12px;
     line-height: 130%;
-    padding: 2px 0 0 2px;
+    padding: 4px;
 }
 
 .comments input {
